# a2a-orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.ru.md  pyproject.toml
.cr/: REPORT.md
.github/workflows/: ci.yml  release.yml
a2a_orchestrator/: __init__.py  cli.py  destructive.py  metrics.py  persistence.py  registration.py  routing.py  server.py  tenant.py  validation.py  web_server.py  ws_server.py
a2a_orchestrator/schemas/: a2a-message.schema.json  agent-card.schema.json
docs/: README.md
docs/en/: architecture.md  cli-reference.md  configuration.md  external-agents.md  getting-started.md  multi-tenant.md  rest-api.md  routing-rules.md  saga-pattern.md  search.md  security.md  signed-messages.md  testing.md  tools-reference.md  websockets.md
docs/ru/: architecture.md  cli-reference.md  configuration.md  external-agents.md  getting-started.md  multi-tenant.md  rest-api.md  routing-rules.md  saga-pattern.md  search.md  security.md  signed-messages.md  testing.md  tools-reference.md  websockets.md
examples/: README.md  mcp.json
examples/agent-cards/: agent-backend.json  agent-database.json  agent-qa.json
scripts/: install.sh  uninstall.sh
src/a2a_orchestrator/: __main__.py  cli.py  config.py  metrics.py  mnemos_client.py  persistence.py  registration.py  registry.py  saga.py  search.py  server.py  session.py  signing.py  tenant.py  web_server.py  ws_server.py
tests/: conftest.py  test_chain_status.py  test_cli.py  test_create_saga_tool.py  test_destructive.py  test_load_context.py  test_metrics.py  test_persistence.py  test_r6_signing.py  test_registration.py  test_registry.py  test_review_fixes.py  test_routing.py  test_saga.py  test_search.py  test_security_fixes.py  test_session.py  test_signing.py  test_tenant.py  test_validation.py  test_web_server.py  test_ws_server.py
tests/e2e/: test_send_a2a_flow.py
