[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "a2a-orchestrator"
version = "1.0.0"
description = "Universal MCP server for A2A routing between agents. Performs R1-R6 routing checks, saga pattern, signed messages, multi-tenant, WebSocket streaming, vector search, web/HTTP wrapper, and external agent registration. Persists messages to Mnemos or JSONL fallback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "A2A Team" }]
keywords = ["mcp", "a2a", "agent-routing", "orchestrator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
    "pydantic>=2",
    "cryptography>=42.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
a2a-orchestrator = "a2a_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/Korrnals/a2a-orchestrator"

# --------------------------------------------------------------------------- #
# Hatchling build config
# --------------------------------------------------------------------------- #

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_orchestrator"]

# Include embedded schemas as package data.
[tool.hatch.build.targets.wheel.force-include]
"src/a2a_orchestrator/schemas" = "a2a_orchestrator/schemas"

[tool.hatch.build.targets.sdist]
include = [
    "src/a2a_orchestrator",
    "tests",
    "examples",
    "README.md",
    "pyproject.toml",
]

# --------------------------------------------------------------------------- #
# Ruff
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src/a2a_orchestrator", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in default argument — FastMCP decorator pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

# --------------------------------------------------------------------------- #
# Mypy
# --------------------------------------------------------------------------- #

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # relax for MVP; tighten later
ignore_missing_imports = true
